--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "author": "emaldonado.daniel@gmail.com",
   "license": "MIT",
   "scripts": {
-    "test": "mocha"
+    "test": "nyc mocha"
   },
   "devDependencies": {
     "chai": "^4.3.6",
     "mocha": "^10.0.0"
+  },
+  "dependencies": {
+    "nyc": "^15.1.0"
   }
 }
